Fixed use the structure: `.multiple.vertical.joined > .multiple.no-wrap + .multiple.joined`, added support for flexbox text-align helpers

--- a/src/components/colors/_colors.scss
+++ b/src/components/colors/_colors.scss
@@ -76,7 +76,8 @@
 
   @if $color_name != inherit { //INFO: Otherwise it will not work for example under `.container-content` that has color: `inherit`
 
-    p > a { //INFO: We do it just under `p`s, because elsewhere might be an unwanted style
+    p > a, //INFO: We do it just under `p`s, because elsewhere might be an unwanted style
+    span > a { //INFO: Same as `p > a` 
 
       color: $link #{$extra};
 
